fix issue with long titles causing flex wrap on new row

--- a/src/assets/scss/customizer/controls/_hamburgers.scss
+++ b/src/assets/scss/customizer/controls/_hamburgers.scss
@@ -10,6 +10,10 @@ ul[id^="sub-accordion-section-bgtfw_menu_hamburgers_"] {
 		display: flex;
 		flex-wrap: wrap;
 
+		h3 {
+			flex: 1;
+		}
+
 		.customize-section-back {
 			display: flex;
 			height: auto;
